# SKNewRoles

./: .gitignore  CMakeLists.txt  CREDIT.html  CmakeLists.txt  DEVELOPER.md  LICENSE.txt  README.html  README.md  SKNewRoles.csproj  SKNewRoles.sln  compile  entitlements.plist  export_presets.cfg  project.godot  更新履歴.html  開発言語.html
.github/ISSUE_TEMPLATE/: config.yml  クエスト募集フォームから-テンプレート.md  役募集フォームから-テンプレート.md
.github/workflows/: release.yml
README_pages/: 1.html  10.html  2.html  3.html  4.html  5.html  6.html  7.html  8.html  9.html
Scenes/: CreateLobby.tscn  Home.tscn  JoinPrivateLobby.tscn  JoinPublicLobby.tscn  LobbyRoom3D.tscn  Lobby_select.tscn  Login.tscn
Scenes/Gamemaps/: MainGameScene.tscn  RoleRevealScene.tscn  StartupScene.tscn
Scenes/Gamemaps/Chunks/: Chunk_-1_-1.tscn  Chunk_-1_0.tscn  Chunk_0_-1.tscn  Chunk_0_0.tscn  Chunk_Default.tscn
Scenes/Prefabs/: LobbyPlayerDummy.tscn  Player.tscn
Scenes/Prefabs/Blocks/: GoldBlock.tscn  GrassBlock.tscn  Stone.tscn  StoneBricks.tscn
Scripts/: Home.cs  Login.cs
Scripts/Game/: MainGameScene.cs  Realtime.cs
Scripts/Lobby/: CreateLobby.cs  LobbyBridge.cs  LobbyRoom.Player.cs  LobbyRoom.cs  LobbySettings.cs  Lobby_select.cs  RoomColorData.cs  RoomUI.cs
Scripts/Lobby/Join/: Http.cs  JoinPrivateLobby.cs  JoinPublicLobby.cs  LobbyRealtime.cs
Scripts/SessionManager/: DiskIO.cs  SessionData.cs  SessionManager.cs  WebApi.cs
Scripts/System/: StartupScene.cs
SumanaiDokkiriAuto/: README.html  SumanaiDokkiriAuto.mcaddon  compile  package.json
SumanaiDokkiriAuto/SumanaiDokkiriAuto BP/scripts/: cmd.ts  definition.js  main.js
src/: RemotePlayer.cpp  RemotePlayer.h  config_manager.cpp  config_manager.h  grass_block.cpp  grass_block.h  lobby_manager.cpp  lobby_manager.h  player.cpp  player.h  register_types.cpp  register_types.h
src/Game/: RoleManager.cpp  RoleManager.h  chunk_manager.cpp  chunk_manager.h  chunk_mesh_builder.cpp  chunk_mesh_builder.h  hud_manager.cpp  hud_manager.h  mca_parser.cpp  mca_parser.h
リソースパック/: リソースパックの導入方法.html
リソースパック/SKNewRoles_Resourcepack(small)_v.3.1.0.0/: pack.mcmeta
リソースパック/Werewolf_Quest_Resourcepack(default)_v.3.0.0.3/: pack.mcmeta  resourcepack.ajmeta
ワールド/SKNewRoles v.3.2.0.1/advancements/: 040b78c6-81eb-4051-ab97-d48ff7fffca1.json  0c197c90-b71f-44af-8334-75c88762da36.json  470d80c1-cc43-400f-a12c-3d778c8cff6e.json  4c397871-d3d7-4652-b6d8-211d9edb0397.json  4d485270-0ca3-4055-909e-355bf4c51bde.json  c14aa307-49eb-420c-b714-72cd706e0c67.json  d22d28e8-84d7-4529-b9ad-24d1e53a584f.json  (+2 more)
開発者用ツール.bundle/: .DS_STORE削除  .gitignore_honban  compile  deploy  password.env  push  制作中の新クエスト.json  制作中の新役.json  役追加.html
(+5617 files in other folders)
